OopAsh: Bail on Shell::EnableKeyboard in Mash and OopAsh.

ShellDelegateMash does not create a valid keyboard ui instance.

TBR=blakeo@chromium.org

Bug: 856235, 646565
Test: No keyboard crash on --enable-features=OopAsh device startup.
Change-Id: I26ac1c13f46b839a4b77c6aaf478abec745126f1
Reviewed-on: https://chromium-review.googlesource.com/1119088
Commit-Queue: Michael Wasserman <msw@chromium.org>
Reviewed-by: Michael Wasserman <msw@chromium.org>
Reviewed-by: James Cook <jamescook@chromium.org>
Cr-Commit-Position: refs/heads/master@{#571313}
Former-commit-id: cebe6768afd5d73e9d1bea19a450a134ecf14e31